# rs-artifacts

./: Cargo.toml
rs-artifacts-script/: Cargo.toml  README.md
rs-artifacts-script/src/: lex.rs
src/: bin.rs  lib.rs  schema.rs
