[package]
name = "rs-artifacts"
version = "0.1.0"
edition = "2024"

[lib]
name = "rs_artifacts"
path = "src/lib.rs"

[[bin]]
name = "rs_artifacts"
path = "src/bin.rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
